# frequency_analysis_text

./: .dockerignore  Dockerfile  LICENSE  README.txt  functionality.py  main.py  pyproject.toml
frequency_analysis_text/: __init__.py  functionality.py  main.py  main_GUI.py  main_gui.py
tests/: test_functionality.py
tests/texts/: text_de.txt  text_en.txt  text_ru.txt  text_uk.txt
