[tool.poetry]
name = "frequency_analysis_text"
version = "0.1.0"
description = "This project is a program designed for analyzing text files."
authors = ["Vitaliy-datascientist <vitaliy.dayneko2410@gmail.com>"]
readme = "README.txt"

[tool.poetry.dependencies]
python = "3.10.11"
setuptools = "^72.2.0"
pymorphy2 = "^0.9.1"
pymorphy2-dicts-uk = "^2.4.1.1.1460299261"
pymorphy2-dicts = "^2.4.393442.3710985"
langid = "^1.1.6"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
