[tool.poetry]
name = "frequency_analysis_text"
version = "2.5.4"
description = "This project is a program designed for analyzing text files."
authors = ["data-tamer2410 <vitaliy.dayneko2410@gmail.com>"]
readme = "README.txt"
license = 'MIT'

[tool.poetry.dependencies]
python = "~3.10"
pymorphy2 = "^0.9.1"
pymorphy2-dicts-uk = "^2.4.1.1.1460299261"
pymorphy2-dicts = "^2.4.393442.3710985"
langid = "^1.1.6"
nltk = "^3.8.1"
setuptools = "^73.0.1"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
